samples/_failures_safe/1761095048_8f39c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ae5b8cd.c: In function ‘main’:
./samples/SAFE/__tmp_9ae5b8cd.c:158:20: error: missing terminating " character
  158 |             printf("Invalid edge parameters. Nodes must be 0
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9ae5b8cd.c:158:13: error: expected expression at end of input
  158 |             printf("Invalid edge parameters. Nodes must be 0
      |             ^~~~~~
./samples/SAFE/__tmp_9ae5b8cd.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ae5b8cd.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ae5b8cd.c:158:13: error: expected declaration or statement at end of input
